<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="facebook_application_id" translatable="false">236492571581756</string>
    <string name="facebook_app_id" translatable="false">236492571581756</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb236492571581756</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <!-- Preference Titles -->
    <string name="preferences">Settings</string>

    <!-- Messages Preferences -->
    <string name="notifications">Notifications alerts</string>
    <string name="language">Chose a language</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for
        incoming emails</string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when
        manually requested</string>
    <string name="slogan">Find a nice restaurant and invite your co-worker for lunch</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="what_workmate_eat">What workmate eat</string>
    <string name="default_banner">I\'m Hungry!</string>
    <string name="info_no_email_found">There is no email found</string>
    <string name="info_no_username_found">There is no name found</string>
    <string name="user_created">This user has been create with success</string>
    <string name="restaurant_choice">Your choice has been registered</string>
    <string name="update">Information has been update</string>
    <string name="user_delete">Your account has been delete</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">Your location permission is disabled.</string>
    <string name="current_location_null">Current location is null. Using defaults.</string>
    <string name="user_fragment_banner">Available Workmates</string>
    <string name="no_restaurant_found">There is no restaurants near you</string>
    <string name="no_name_found">No name found for this restaurant</string>
    <string name="no_hour_found">No hour found for this restaurant</string>
    <string name="unknown">Unknown</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="restaurant_details">style - address</string>
    <string name="no_details">No details found for this restaurant</string>
    <string name="is_joining"> is joining!</string>
    <string name="hint_search_bar">Search restaurant</string>
    <string name="choose_restaurant">Please choose a restaurant !</string>
    <string name="is_eating">\ is eating </string>
    <string name="hasnot_decided">\ hasn\'t decided yet</string>
    <string name="address">address</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="select_a_language">Select a Language</string>
    <string name="delete_your_account">DELETE YOUR ACCOUNT</string>
    <string name="notification_channel_id" translatable="false">password</string>
    <string name="default_notification_channel_id" translatable="false">password</string>
    <string name="no_phone">No phone number for this restaurant</string>
    <string name="no_website">No Website found for this restaurant</string>
    <string name="notif_pt_1">Hello\ </string>
    <string name="notif_pt_2">\ it\'s Time to Lunch you\'ll eat at\ </string>
    <string name="notif_pt_3">\ at \ </string>
    <string name="notif_pt_4">\ with\ </string>
    <string name="notification_name">Time\ To\ Lunch!</string>
    <string name="message_restaurant_null">\ let\'s choose a restaurant</string>
</resources>