<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/go4lunch_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_alignTop="@+id/image_profile"
            android:layout_toEndOf="@+id/image_profile"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_alignBottom="@+id/image_profile"
            android:layout_toEndOf="@+id/image_profile"
            android:text="@string/email"/>

    </RelativeLayout>


</LinearLayout>