<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <AutoCompleteTextView
        android:id="@+id/language_actv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/select_a_language"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_actv"
        android:text="@string/notifications"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/suppress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_switch"
        android:layout_marginTop="50dp"
        android:background="@color/suppress_color"
        android:text="@string/delete_your_account"/>

    <Button
        android:id="@+id/validation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/suppress_button"
        android:layout_marginTop="70dp"
        android:text="Appliquer les changements"
        android:background="@color/primary_color"/>
</androidx.constraintlayout.widget.ConstraintLayout>