<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.ConnexionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/connexion_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/go4lunch_background" />

    <ImageView
        android:id="@+id/connexion_logo"
        android:layout_width="@dimen/logo_dimension_size"
        android:layout_height="@dimen/logo_dimension_size"
        android:src="@drawable/ic_logo_go4lunch"
        app:tint="@color/white"
        android:layout_alignTop="@id/connexion_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/bottom_bar_height"
        android:paddingStart="@dimen/connexion_logo_padding_start"/>

    <TextView
        android:id="@+id/connexion_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/connexion_appname_size"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/connexion_logo"/>

    <TextView
        android:id="@+id/connexion_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_below="@id/connexion_app_name"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/connexion_fb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/connexion_btn_height"
        android:layout_marginStart="@dimen/connexion_btn_margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        android:drawableStart="@drawable/ic_facebook_logo"
        android:backgroundTint="@color/com_facebook_blue"
        android:layout_below="@id/connexion_slogan"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/connexion_google"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/connexion_btn_height"
        android:layout_marginTop="@dimen/connexion_margin_top"
        android:paddingStart="@dimen/connexion_btn_padding_start"
        android:textColor="@color/white"
        android:text="@string/sign_in_with_google"
        android:drawableStart="@drawable/ic_google_button"
        android:drawableTint="@color/white"
        android:backgroundTint="@color/google_btn"
        android:layout_alignStart="@id/connexion_fb"
        android:layout_alignEnd="@id/connexion_fb"
        android:layout_below="@id/connexion_fb"
        android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/connexion_email"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/connexion_btn_height"
            android:layout_marginTop="@dimen/connexion_margin_top"
            android:paddingStart="@dimen/connexion_btn_padding_start"
            android:textColor="@color/white"
            android:text="@string/sign_in_with_email"
            android:drawableStart="@drawable/fui_ic_mail_white_24dp"
            android:drawableTint="@color/white"
            android:backgroundTint="@color/quantum_grey"
            android:layout_alignStart="@id/connexion_fb"
            android:layout_alignEnd="@id/connexion_fb"
            android:layout_below="@id/connexion_google"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/connexion_twitter"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/connexion_btn_height"
            android:layout_marginTop="@dimen/connexion_margin_top"
            android:paddingStart="@dimen/connexion_btn_padding_start"
            android:textColor="@color/white"
            android:text="@string/sign_in_with_twitter"
            android:drawableStart="@drawable/ic_twitter_logo_shape_svgrepo_com"
            android:drawableTint="@color/white"
            android:backgroundTint="@color/twitter_color"
            android:layout_alignStart="@id/connexion_fb"
            android:layout_alignEnd="@id/connexion_fb"
            android:layout_below="@id/connexion_email"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</ScrollView>