<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/restaurant_name"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:textStyle="bold"
        android:textSize="@dimen/restaurant_name_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_restaurant_margin"
        android:text="@string/address"
        android:textSize="@dimen/address_restaurant_size"
        app:layout_constraintStart_toStartOf="@id/restaurant_name"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/restaurant_schedules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_restaurant_margin"
        android:layout_marginBottom="@dimen/fragment_restaurant_margin"
        android:textStyle="italic"
        android:text="@string/open"
        app:layout_constraintStart_toStartOf="@id/restaurant_name"
        app:layout_constraintTop_toBottomOf="@id/restaurant_address"/>

    <TextView
        android:id="@+id/restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_image"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_name"
        android:maxLines="1"/>

    <ImageView
        android:id="@+id/restaurant_workmate_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_supervisor_account_24"
        app:layout_constraintStart_toStartOf="@id/restaurant_rank"
        app:layout_constraintTop_toTopOf="@id/restaurant_address"/>

    <TextView
        android:id="@+id/restaurant_workmate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/restaurant_workmate_image"
        app:layout_constraintStart_toEndOf="@id/restaurant_workmate_image"
        android:maxLines="1"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/restaurant_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/restaurant_schedules"
        app:layout_constraintEnd_toStartOf="@id/restaurant_image"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:numStars="3" />

    <ImageView
        android:id="@+id/restaurant_image"
        android:layout_width="@dimen/fragment_restaurant_image_size"
        android:layout_height="@dimen/fragment_restaurant_image_size"
        app:layout_constraintTop_toTopOf="@id/restaurant_name"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_schedules"
        android:layout_marginEnd="@dimen/fragment_restaurant_margin_end"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>