<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:backgroundTint="@color/fui_transparent"
        app:tint="@color/white" />

    <RelativeLayout
        android:id="@+id/restaurant_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/restaurant_image_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_details_size"/>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/restaurant_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/restaurant_image"
        android:backgroundTint="@color/primary_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/restaurant_name_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/quantum_yellow"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:numStars="3"
            android:layout_toEndOf="@id/restaurant_name_details"/>
            <TextView
                android:id="@+id/restaurant_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/restaurant_name_details"
                android:text="@string/restaurant_details"
                android:textColor="@color/white" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_circle_24"
        android:backgroundTint="@color/white"
        app:maxImageSize="@dimen/details_fab_max_size"
        app:layout_constraintEnd_toEndOf="@id/restaurant_image"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_info"
        android:layout_marginEnd="@dimen/details_fab_max_size"
        android:layout_marginBottom="40dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/restaurant_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/restaurant_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/restaurant_contact_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <ImageButton
                android:id="@+id/phone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:src="@drawable/fui_ic_phone_white_24dp"
                app:tint="@color/primary_color"
                app:layout_constraintStart_toStartOf="@id/phone_name"
                app:layout_constraintEnd_toEndOf="@id/phone_name"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/phone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/phone_button"
                app:layout_constraintStart_toEndOf="@id/phone_name"
                app:layout_constraintEnd_toStartOf="@id/like_name"
                android:text="@string/call"
                android:textColor="@color/primary_color"/>

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:src="@drawable/ic_baseline_star_24"
                app:tint="@color/primary_color"
                app:layout_constraintStart_toStartOf="@id/like_name"
                app:layout_constraintEnd_toEndOf="@id/like_name"
                app:layout_constraintTop_toTopOf="@id/phone_button"/>

            <TextView
                android:id="@+id/like_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textColor="@color/primary_color"
                app:layout_constraintTop_toTopOf="@id/phone_name"
                app:layout_constraintStart_toEndOf="@id/phone_name"
                android:layout_marginStart="65dp" />

            <ImageButton
                android:id="@+id/website_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:src="@drawable/ic_baseline_language_24"
                app:tint="@color/primary_color"
                app:layout_constraintStart_toStartOf="@id/website_name"
                app:layout_constraintEnd_toEndOf="@id/website_name"
                app:layout_constraintTop_toTopOf="@id/phone_button" />

            <TextView
                android:id="@+id/website_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="@color/primary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/phone_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_rv_details"
        tools:listitem="@layout/fragment_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/restaurant_contact"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>